project_2_eventbus_docker_kube/infra/k8s/event-bus-depl.yaml
# add a Cluster IP service object to this event-bus deployment object
apiVersion: v1
kind: Service
metadata:
  name: event-bus-clusterip # name of this Cluster IP Service.
spec:
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 5005
      targetPort: 5005
