project_2_eventbus_docker_kube/infra/k8s/posts-depl.yaml
# Add a ClusterIP Service for this post deployment
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip # name of this Cluster IP Service.
spec:
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      targetPort: 5001
      port: 5001
